# aut-aut

./: .gitignore  README.org  pyproject.toml  scrapy.cfg
aut_aut/: constants.py  items.py  middlewares.py  pipelines.py  settings.py
aut_aut/spiders/: either_or_scraper.py
tests/: test_aut_aut.py
