[tool.poetry]
name = "aut-aut"
version = "0.1.0"
description = "A scraper for Søren Kierkgaard's original Danish works."
authors = ["Lao Tong <lao.s.t@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
